working on script dependencies